--- a/Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
+++ b/Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
@@ -631,11 +631,123 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Adding Geographical Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>M3A</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "      <td>M4A</td>\n",
+       "      <td>43.725882</td>\n",
+       "      <td>-79.315572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Harbourfront, Regent Park</td>\n",
+       "      <td>M5A</td>\n",
+       "      <td>43.654260</td>\n",
+       "      <td>-79.360636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Heights, Lawrence Manor</td>\n",
+       "      <td>M6A</td>\n",
+       "      <td>43.718518</td>\n",
+       "      <td>-79.464763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "      <td>M7A</td>\n",
+       "      <td>43.662301</td>\n",
+       "      <td>-79.389494</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postcode           Borough                     Neighbourhood Postal Code  \\\n",
+       "0      M3A        North York                         Parkwoods         M3A   \n",
+       "1      M4A        North York                  Victoria Village         M4A   \n",
+       "2      M5A  Downtown Toronto         Harbourfront, Regent Park         M5A   \n",
+       "3      M6A        North York  Lawrence Heights, Lawrence Manor         M6A   \n",
+       "4      M7A      Queen's Park                      Queen's Park         M7A   \n",
+       "\n",
+       "    Latitude  Longitude  \n",
+       "0  43.753259 -79.329656  \n",
+       "1  43.725882 -79.315572  \n",
+       "2  43.654260 -79.360636  \n",
+       "3  43.718518 -79.464763  \n",
+       "4  43.662301 -79.389494  "
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfgeo = pd.read_csv('Geospatial_Coordinates.csv')\n",
+    "dfgeo['Postcode'] = dfgeo['Postal Code']\n",
+    "df = df.merge(dfgeo)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
